# my_testlist

./: .gitignore  README.md
aardio/first/: default.aproj  main.aardio
aardio/second_console/: default.aproj  main.aardio
android/01_study/: settings.gradle.kts
android/01study/: settings.gradle.kts
android/02study/: settings.gradle
android/03calc/: settings.gradle.kts
android/04banner/: settings.gradle.kts
android/05openbanner/: settings.gradle.kts
android/http/: settings.gradle.kts
android/oldbanner/: settings.gradle
android/openbanner/: local.properties  settings.gradle
android/openbanner3/: build.gradle.kts  settings.gradle.kts
android/photobackup/: settings.gradle.kts
android/shop/: settings.gradle
android/shopdemo/: settings.gradle.kts
android_mac/01study/: settings.gradle.kts
angular/01-study/: README.md  (+3 more)
basic/: README.md
blog/: Cmder命令行提示符修改.md
c/: README.md
c++20/: README.md
c++builder/: study.groupproj  study.groupproj.local
go/: .gitignore  go.mod
go2/: go.mod  go.sum
go3/: go.mod
go4/: go.mod  go.sum  main.go  s.js  xm_test.go
node/: blog ubuntu一种简单安装node的方法.md
qt/01_helloworld/Helloworld/: CMakeLists.txt  Helloworld.qmlproject  Helloworld.qmlproject.qtds  qmlmodules
qt/01_helloworld/Helloworld/content/: App.qml  Screen01.ui.qml
qt/01_helloworld/Helloworld/imports/: CMakeLists.txt
qt/01_helloworld/Helloworld/imports/Helloworld/: CMakeLists.txt  qmldir
qt/01_helloworld/Helloworld/imports/Helloworld/designer/: plugin.metainfo
qt/01_helloworld/Helloworld/src/: app_environment.h  import_qml_plugins.h
(+1873 files in other folders)
